--- a/crypto/box/Cargo.toml
+++ b/crypto/box/Cargo.toml
@@ -12,6 +12,7 @@ digest = { version = "0.9" }
 failure = { version = "0.1.5", default-features = false }
 hkdf = { version = "0.9.0", default-features = false }
 mc-crypto-keys = { path = "../keys", default-features = false }
+mc-crypto-ct-aead = { path = "../ct-aead" }
 rand_core = { version = "0.5", default-features = false }
 
 [dev_dependencies]
