integrate preliminary ct-aead code

--- a/crypto/box/Cargo.toml
+++ b/crypto/box/Cargo.toml
@@ -5,13 +5,15 @@ authors = ["MobileCoin"]
 edition = "2018"
 
 [dependencies]
+mc-crypto-keys = { path = "../keys", default-features = false }
+mc-crypto-ct-aead = { path = "../ct-aead" }
+
 aead = "0.2"
 aes-gcm = { version = "0.3.0", default-features = false }
 blake2 = { version = "0.8", default-features = false }
 digest = { version = "0.8" }
 failure = { version = "0.1.5", default-features = false }
 hkdf = { version = "0.8.0", default-features = false }
-mc-crypto-keys = { path = "../keys", default-features = false }
 rand_core = { version = "0.5", default-features = false }
 
 [dev_dependencies]
